--- a/events.html
+++ b/events.html
@@ -130,7 +130,7 @@
 
   </main><!-- End #main -->
 
-   <!-- ======= Footer ======= -->
+ <!-- ======= Footer ======= -->
  <footer id="footer">
   <div class="footer-top">
     <div class="container">
@@ -160,21 +160,16 @@
         <div class="col-lg-2 col-md-6 footer-links">
           <h4>Useful Links</h4>
           <ul>
-            <li><i class="bx bx-chevron-right"></i> <a href="index.html#">Home</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="index.html#about">About us</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="index.html#services">Services</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="index.html#team">Founder</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="#about">About us</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="#services">Services</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="#team">Founder</a></li>
             
           </ul>
         </div>
 
         <div class="col-lg-3 col-md-6 footer-links">
           <h4>Our Services</h4>
-          <ul>
-            <li><i class="bx bx-chevron-right"></i> <a href="https://gadalmarket.com/">Gadal Market</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="https://www.gadalrent.com/">Gadal Rent</a></li>
-           
-          </ul>
         </div>
 
         <div class="col-lg-4 col-md-6 footer-newsletter">
