--- a/index.html
+++ b/index.html
@@ -264,11 +264,11 @@ s0.parentNode.insertBefore(s1,s0);
       </div>
     </section><!-- End Services Section -->
 
-    <section id="cta" class="cta">
+    <section id="cta" class="cta" style="padding:0%;">
       <div class="container">
         <div class="row" data-aos="zoom-out">
           <div style="display:flex; align-items:center; justify-content: space-between;">
-            <div style="flex-grow: 2; padding-right: 20px;">
+            <div style="flex-grow: 2; padding-right: 20px;min-width: 600px;">
               <div>
                 <h3>Download <span style="color: #e78d1e;">Gadal</span> Mobile Applications</h3>
               </div>
@@ -289,11 +289,11 @@ s0.parentNode.insertBefore(s1,s0);
               </div>
             </div>
             <div class="appImages">
-              <section id="banner-details" class="portfolio-details">
+              <section id="banner-details" class="banner-details">
                 <div class="container">
-                  <div class="row gy-4">
+                  <div class="row gy-2">
                     <div class="col-lg-8">
-                      <div class="portfolio-details-slider swiper">
+                      <div class="banner-details-slider swiper">
                         <div class="swiper-wrapper align-items-center">
                           <div class="swiper-slide">
                             <img src="assets/img/Iphone Gadal.svg" alt="" style="max-width: 50%; margin: auto;">
@@ -302,7 +302,7 @@ s0.parentNode.insertBefore(s1,s0);
                             <img src="assets/img/Samusng Gadal.svg" alt="" style="max-width: 50%; margin: auto;">
                           </div>
                         </div>
-                        <div class="swiper-pagination"></div>
+                       
                       </div>
                     </div>
                   </div>
