addto jobs.html

--- a/events.html
+++ b/events.html
@@ -92,7 +92,7 @@
              
             </ul>
           </li>
-          <li><a class="nav-link scrollto" href="#">Job & Career</a></li>
+          <li><a class="nav-link scrollto" href="jobs.html">Job & Career</a></li>
           <li><a class="nav-link scrollto" href="index.html#contact">Contact</a></li>
          
         </ul>
@@ -170,6 +170,14 @@
 
         <div class="col-lg-3 col-md-6 footer-links">
           <h4>Our Services</h4>
+          <ul>
+            <li><i class="bx bx-chevron-right"></i> <a href="inner-page.html#machinary-details">Machinery</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="inner-page.html#property-details">Property</a></li>    
+            <li><i class="bx bx-chevron-right"></i> <a href="inner-page.html#vehicle-details">Vehicle</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="inner-page.html#propertyMng-details">Property Management</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="inner-page.html#importexport-details">Import and Export Services</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="inner-page.html#marketing-details">Investment Consultancy</a></li>
+          </ul>
         </div>
 
         <div class="col-lg-4 col-md-6 footer-newsletter">
