--- a/detailpage.html
+++ b/detailpage.html
@@ -185,6 +185,14 @@
 
         <div class="col-lg-3 col-md-6 footer-links">
           <h4>Our Services</h4>
+          <ul>
+            <li><i class="bx bx-chevron-right"></i> <a href="inner-page.html#machinary-details">Machinery</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="inner-page.html#property-details">Property</a></li>    
+            <li><i class="bx bx-chevron-right"></i> <a href="inner-page.html#vehicle-details">Vehicle</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="inner-page.html#propertyMng-details">Property Management</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="inner-page.html#importexport-details">Import and Export Services</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="inner-page.html#marketing-details">Investment Consultancy</a></li>
+          </ul>
         </div>
 
         <div class="col-lg-4 col-md-6 footer-newsletter">
