--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ s0.parentNode.insertBefore(s1,s0);
              
             </ul>
           </li>
-          <li><a class="nav-link scrollto" href="#">Job & Career</a></li>
+          <li><a class="nav-link scrollto" href="jobs.html">Job & Career</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
          
         </ul>
@@ -594,7 +594,7 @@ s0.parentNode.insertBefore(s1,s0);
             <div class="info-item">
               <i class="bi bi-envelope"></i>
               <h3>Email</h3>
-              <p><a href="#">gadaltechnologies@gmail.com
+              <p><a href="#">info@gadaltechnologies.com
 </a></p>
             </div>
           </div><!-- End Info Item -->
@@ -645,13 +645,13 @@ s0.parentNode.insertBefore(s1,s0);
               Amen Building House number 401<br>
               <br>
               <strong>Phone:</strong> +2519 11 22 93 61<br>
-              <strong>Email:</strong>gadaltechnologies@gmail.com<br>
+              <strong>Email:</strong>info@gadaltechnologies.com<br>
             </p>
             <div class="social-links mt-3">
               <a href="https://twitter.com/gadaltechnology" class="twitter"><i class="bx bxl-twitter"></i></a>
               <a href="https://www.facebook.com/gadaltechnologies" class="facebook"><i class="bx bxl-facebook"></i></a>
               <a href="https://www.instagram.com/gadal_market/" class="instagram"><i class="bx bxl-instagram"></i></a>
-              <a href="https://lnkd.in/dgyeHgWM" class="google-plus"><i class="bx bxl-youtube"></i></a>
+              <a href="https://youtube.com/@gadaltechnologies?si=AFNXO-XArJgoB9p3" class="google-plus"><i class="bx bxl-youtube"></i></a>
               <a href="https://www.linkedin.com/company/gadal-technologies/?viewAsMember=true" class="linkedin"><i class="bx bxl-linkedin"></i></a>
               <a href="http://t.me/gadaltechnologies" class="linkedin"><i class="bx bxl-telegram"></i></a>
              </div>
@@ -671,6 +671,14 @@ s0.parentNode.insertBefore(s1,s0);
 
         <div class="col-lg-3 col-md-6 footer-links">
           <h4>Our Services</h4>
+          <ul>
+            <li><i class="bx bx-chevron-right"></i> <a href="inner-page.html#machinary-details">Machinery</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="inner-page.html#property-details">Property</a></li>    
+            <li><i class="bx bx-chevron-right"></i> <a href="inner-page.html#vehicle-details">Vehicle</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="inner-page.html#propertyMng-details">Property Management</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="inner-page.html#importexport-details">Import and Export Services</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="inner-page.html#marketing-details">Investment Consultancy</a></li>
+          </ul>
         </div>
 
         <div class="col-lg-4 col-md-6 footer-newsletter">
